kubernetes/projects/eks-cluster/wordpress-mysql/kubernetes/mysql-service.yaml
---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
