kubernetes/projects/eks-cluster/wordpress-mysql/kubernetes/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
